hosting/local-development-frontend.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: yournamespacewebclient
  name: yournamespacewebclient
spec:
  replicas: 1
  selector:
    matchLabels:
      app: yournamespacewebclient
  strategy: {}
  template:
    metadata:
      labels:
        app: yournamespacewebclient
    spec:
      containers:
      - image: yournamespacewebclient:latest
        name: yournamespacewebclient
        imagePullPolicy: Never
        ports:
          - containerPort: 3000
            name: http
        resources:
          limits:
            cpu: 2000m
            memory: 20000Mi
          requests:
            cpu: 2000m
            memory: 20000Mi
            
status: {}
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: yournamespacewebclient-svc
  name: yournamespacewebclient-svc
spec:
  ports:
  - port: 7999
    protocol: TCP
    targetPort: 3000
    name: http
  selector:
    app: yournamespacewebclient
status:
  loadBalancer: {}
