hosting/test-ingress-web-client.yml
apiVersion: v1
items:
- apiVersion: networking.k8s.io/v1
  kind: Ingress
  metadata:
    annotations:
      kubernetes.io/ingress.class: "nginx"
      #nginx.ingress.kubernetes.io/rewrite-target: /$2
    name: example-ingress-web-client
    namespace: default
  spec:
    rules:
    - http:
        paths:    
        - backend:
            service:
              name: yournamespacewebclient-service
              port:
                number: 7999
          path: /frontend(/|$)(.*)
          pathType: ImplementationSpecific  
        - backend:
            service:
              name: yournamespacewebclient-service
              port:
                number: 7999
          path: /static(/|$)(.*)
          pathType: ImplementationSpecific
        - backend:
            service:
              name: yournamespacewebclient-service
              port:
                number: 7999
          path: /logo192.png(/|$)(.*)
          pathType: ImplementationSpecific
        - backend:
            service:
              name: yournamespacewebclient-service
              port:
                number: 7999
          path: /favicon.ico(/|$)(.*)
          pathType: ImplementationSpecific
  status:
    loadBalancer:
      ingress:
      - hostname: localhost
kind: List
metadata:
